--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "packageManager": "yarn@3.0.2",
   "scripts": {
-    "build": "rollup --config"
+    "build": "rollup --config",
+    "build:zip": "yarn build && mkdir -p dist && cd build && zip -r ../dist/${npm_package_name}-${npm_package_version}.zip . -x '.DS_Store' -x '__MACOSX'"
   },
   "dependencies": {
     "preact": "^10.5.14"
